raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-55-50.ceg/compilation.txt
NT.java:44: error: ';' expected
        mengembalikan nilai / 2;
                           ^
1 error
Not compiled
